// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aliases are parseable: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "Membership",
              "declaredName": "CCC",
              "declaredShortName": "C",
              "elements": [
                {
                  "$type": "Annotation",
                  "element": {
                    "$type": "Documentation",
                    "about": [],
                    "body": "/* alias doc */",
                  },
                  "elements": [],
                },
              ],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "D",
              "elements": [],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
              "visibility": "private",
            },
          ],
          "declaredName": "N1",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`all top-level elements are in the root namespace: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Documentation",
          "about": [],
          "body": "/* root doc */",
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "A",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "C",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "DataType",
          "children": [],
          "declaredName": "D",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Feature",
          "children": [],
          "declaredName": "f",
          "heritage": [
            {
              "$type": "FeatureTyping",
              "elements": [],
              "reference": {
                "$type": "TypeReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "C",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isNonunique": false,
          "isOrdered": false,
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Package",
          "children": [],
          "declaredName": "P",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`namespace elements can have visibility: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "C",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
              "visibility": "public",
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "DataType",
                "children": [],
                "declaredName": "D",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
              "visibility": "private",
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "f",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "C",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
              "visibility": "protected",
            },
          ],
          "declaredName": "N",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`namespaces are parseable: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [],
          "declaredName": "N1",
          "declaredShortName": "'1.1'",
          "prefixes": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* This is an example of a namespace body. */",
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "C",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "DataType",
                "children": [],
                "declaredName": "D",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "f",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "C",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Namespace",
                "children": [],
                "declaredName": "N3",
                "prefixes": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "N2",
          "declaredShortName": "'1.2'",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`namespaces can have comments: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Class",
                "children": [],
                "declaredName": "A",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Comment",
                "about": [
                  {
                    "$type": "Annotation",
                    "elements": [],
                    "reference": {
                      "$type": "ElementReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Class",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "body": "/* comment about A */",
                "declaredName": "Comment1",
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* comment about N9 */",
                "declaredName": "Comment2",
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* also comment about N9 */",
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* doc about N9 */",
                "declaredName": "N9_Doc",
              },
              "elements": [],
            },
          ],
          "declaredName": "N9",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;
